--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,8 @@ code {
   display: grid;
   margin: auto;
   opacity: 1.0;
-  background-color: #a7bcff;
+  /* background-color: #a7bcff; */
+  background-image: linear-gradient(120deg, #fccb90 0%, #d57eeb 100%);
 }
 .signup-img{
   height:100%;
@@ -26,12 +27,14 @@ code {
   border-radius: 25px;
   border-top-right-radius: 0%;
   border-bottom-right-radius: 0%;
+  object-fit: cover;
+  object-position: center;
 }
 .signupcontainer{
   width:800px;
   height:600px;
-  border: 2px solid black;
-  box-shadow: black;
+  /* border: 2px solid black; */
+  box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.4);
   display: grid;
   margin: auto;
   background-color: white;
@@ -48,7 +51,7 @@ width:300px;
 height:600px;
 display: grid;
 margin: auto;
-background-color: #B9E9FC;
+/* background-color: #B9E9FC; */
 border-top-right-radius: 25px;
 border-bottom-right-radius: 25px;
 opacity: 0.8;
@@ -205,7 +208,7 @@ label{
 .chatmsg{
   margin-left:1px;
   background-color: white;
-  height:70px;
+  height:60px;
   padding:10px;
 }
 .send{
@@ -251,4 +254,8 @@ outline:none;
         border-radius: 10px 0px 10px 10px;
         max-width: max-content;
         align-items: flex-end;
+}
+.user:hover{
+  background-color: #2f2d52;;
+  cursor:pointer;
 }
